test/asm/syntax-error-after-syntax-error.err
error: syntax error, unexpected *
    at syntax-error-after-syntax-error.asm(2)
error: Unterminated string
    at syntax-error-after-syntax-error.asm(3)
error: syntax error, unexpected xor
    at syntax-error-after-syntax-error.asm(6)
error: syntax error, unexpected :
    at syntax-error-after-syntax-error.asm(9)
error: syntax error, unexpected stop, expecting end of line or end of buffer or end of fragment literal or ::
    at syntax-error-after-syntax-error.asm(10)
Assembly aborted with 5 errors!
